chore: inicializar proyecto Maven con JavaFX y JPA